First pass of airport reconciliation and related functions
